// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Mobile 1`] = `
<ds-pagination
  aria-label="Bla i sider"
  role="navigation"
>
  <ul>
    <li>
      <button
        aria-label="Forrige side"
        data-variant="tertiary"
        type="button"
      >
      </button>
    </li>
    <li>
      <button
        aria-label="Side 2"
        data-variant="tertiary"
        type="button"
      >
        2
      </button>
    </li>
    <li>
      <button
        aria-label="Side 3"
        data-variant="tertiary"
        type="button"
      >
        3
      </button>
    </li>
    <li>
      <button
        aria-label="Side 4"
        data-variant="tertiary"
        type="button"
      >
        4
      </button>
    </li>
    <li>
      <button
        aria-label="Neste side"
        data-variant="tertiary"
        type="button"
      >
      </button>
    </li>
  </ul>
</ds-pagination>
`;

exports[`Preview 1`] = `
<ds-pagination
  aria-label="Sidenavigering"
  role="navigation"
>
  <ul>
    <li>
      <button
        aria-label="Forrige side"
        data-variant="tertiary"
        type="button"
      >
        Forrige
      </button>
    </li>
    <li>
      <button
        aria-label="Side 1"
        data-variant="tertiary"
        type="button"
      >
        1
      </button>
    </li>
    <li>
      <button
        aria-label="Side 2"
        data-variant="tertiary"
        type="button"
      >
        2
      </button>
    </li>
    <li>
      <button
        aria-label="Side 3"
        data-variant="tertiary"
        type="button"
      >
        3
      </button>
    </li>
    <li>
      <button
        aria-current="true"
        aria-label="Side 4"
        data-variant="tertiary"
        type="button"
      >
        4
      </button>
    </li>
    <li>
      <button
        aria-label="Side 5"
        data-variant="tertiary"
        type="button"
      >
        5
      </button>
    </li>
    <li>
    </li>
    <li>
      <button
        aria-label="Side 10"
        data-variant="tertiary"
        type="button"
      >
        10
      </button>
    </li>
    <li>
      <button
        aria-label="Neste side"
        data-variant="tertiary"
        type="button"
      >
        Neste
      </button>
    </li>
  </ul>
</ds-pagination>
`;

exports[`With Anchor 1`] = `
<div style="gap: 70px; display: flex; flex-direction: column;">
  <div>
    <input
      aria-label="Søk"
      placeholder
      type="search"
      value="https://udir.design.no/pagination"
    >
  </div>
  <ds-pagination
    aria-label="Sidenavigering"
    role="navigation"
  >
    <ul>
      <li>
        <a
          aria-label="Forrige side"
          data-variant="tertiary"
          href="#side-3"
        >
          Forrige
        </a>
      </li>
      <li>
        <a
          aria-label="Side 1"
          data-variant="tertiary"
          href="#side-1"
        >
          1
        </a>
      </li>
      <li>
        <a
          aria-label="Side 2"
          data-variant="tertiary"
          href="#side-2"
        >
          2
        </a>
      </li>
      <li>
        <a
          aria-label="Side 3"
          data-variant="tertiary"
          href="#side-3"
        >
          3
        </a>
      </li>
      <li>
        <a
          aria-current="true"
          aria-label="Side 4"
          data-variant="tertiary"
          href="#side-4"
        >
          4
        </a>
      </li>
      <li>
        <a
          aria-label="Side 5"
          data-variant="tertiary"
          href="#side-5"
        >
          5
        </a>
      </li>
      <li>
      </li>
      <li>
        <a
          aria-label="Side 10"
          data-variant="tertiary"
          href="#side-10"
        >
          10
        </a>
      </li>
      <li>
        <a
          aria-label="Neste side"
          data-variant="tertiary"
          href="#side-5"
        >
          Neste
        </a>
      </li>
    </ul>
  </ds-pagination>
</div>
`;
